--- a/style.css
+++ b/style.css
@@ -138,52 +138,70 @@ title-h2 {
 }
 
 .bg-white {
-    background-color:#fff;
+  padding: 23px 30px 34px 30px;
+}
+
+.bg-white {
+  background-color:#fff;
 }
 
 .bg-green {
   background-color:#66C05D;
   color: #fff;
-  padding: 15px 30px;
+  padding: 27px 41px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  /*align-items: center;*/ 
+
 }
 
 .bg-green-item {
-  flex: 0 0 60%;
+  flex: 0 0 55%;
+  margin-bottom: 21px;
 }
 
 .bg-green-img {
-  flex: 0 0 40%;
+  flex: 0 0 31%;
   text-align: center;
 }
 
 .bg-green h3 {
   font-size: 18px;
   font-weight: 700;
-  padding: 15px 30px;
-  display: flex;
-  justify-content: space-between;
+  margin-top: 0;
+  margin: 20px;
+}
+
+.bg-green p {
+  line-height: 1.5;
+  margin-bottom: 24px;
 }
 
 .bg-green input {
   font-size: 14px;
   border: 1px solid #fff;
   border-radius: 20px;
-  padding: 10px 15px;
+  padding: 9px 15px;
+  width: 100%;
+  box-sizing: border-box;
+  max-width: 225px;
 }
 
 .bg-green .btn {
   display: block;
   text-align: center;
-  max-width: 150px;
+  max-width: 166px;
+  
+}
+
+.catalog {
+padding-top: 100px;
 }
 
 .grid {
   display: grid;
   grid-template-columns: repeat(4,1fr);
-  grid-gap: 0 30px;
+  grid-gap: 23px 30px;
 }
 
 .grid-item-title {
@@ -200,35 +218,49 @@ title-h2 {
 .grid-item-left {
   grid-column: 1/3 ;
   grid-row: 3/4;
+  margin-top: 80px;
 }
 
 .grid-item-right {
   grid-column: 3/5 ;
   grid-row: 3/4;
+  margin-top: 80px;
 }
 
 .grid-item-catalog {
   text-align: center;
-  padding: 15px;
 }
 
 .grid-item-catalog .bg-whit {
-  padding: 15px 30px;
+  padding: 23px 30px;
+}
+
+.thumb {
+  margin-bottom: 14px;
+}
+
+.grid-title{
+  line-height: 1.5;
+  margin-bottom: 0;
 }
 
 .grid-price{
   font-size: 21px;
   font-weight: 500;
+  margin-top: 14px;
+  letter-spacing: 1px;
+  margin-bottom: 25px;
 }
 
 .grid-btn {
   font-size: 14px;
-  border-radius: 20px;
+  border-radius: 30px;
   border: 2px solid #66C05D;
   background-color:#66C05D;
   color: #fff;
-  padding: 10px 25px;
+  padding: 6px 41px;
   text-decoration: none;
   transition: 0.2s ease;
   cursor: pointer;
 }
+
