--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
 }
 
 .header-info span {
-font-size: 16px;
+  font-size: 16px;
 }
 
 .header-info button {
@@ -69,7 +69,7 @@ font-size: 16px;
   padding: 10px 25px;
   margin-left: 36px;
   transition: 0.2s ease;
-  cursor: ;
+  cursor: pointer;
 }
 
 .header-info button:hover {
@@ -138,7 +138,7 @@ title-h2 {
 }
 
 .bg-white {
-  padding: 23px 30px 34px 30px;
+  padding: 23px 30px 30px 30px;
 }
 
 .bg-white {
@@ -148,11 +148,10 @@ title-h2 {
 .bg-green {
   background-color:#66C05D;
   color: #fff;
-  padding: 27px 41px;
+  padding: 34px 41px;
   display: flex;
   justify-content: space-between;
   /*align-items: center;*/ 
-
 }
 
 .bg-green-item {
@@ -169,7 +168,7 @@ title-h2 {
   font-size: 18px;
   font-weight: 700;
   margin-top: 0;
-  margin: 20px;
+  margin-bottom: 21px;
 }
 
 .bg-green p {
@@ -191,17 +190,18 @@ title-h2 {
   display: block;
   text-align: center;
   max-width: 166px;
-  
+  padding: 8px 0;
 }
 
 .catalog {
-padding-top: 100px;
+  padding-top: 60px;
+  padding-bottom: 133px;
 }
 
 .grid {
   display: grid;
   grid-template-columns: repeat(4,1fr);
-  grid-gap: 23px 30px;
+  grid-gap: 19px 30px;
 }
 
 .grid-item-title {
@@ -249,7 +249,7 @@ padding-top: 100px;
   font-weight: 500;
   margin-top: 14px;
   letter-spacing: 1px;
-  margin-bottom: 25px;
+  margin-bottom: 29px;
 }
 
 .grid-btn {
@@ -262,5 +262,96 @@ padding-top: 100px;
   text-decoration: none;
   transition: 0.2s ease;
   cursor: pointer;
+}
+
+.footer-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 25px;
+  padding-bottom: 20px;
+}
+
+.footer-info {
+  display: flex;
+  align-items: center;
+}
+
+.footer-info span:first-child {
+  font-size: 14px;
+  margin-left: 0;
+}
+
+.footer-info span {
+  font-size: 16px;
+  margin-left: 36px;
+}
+
+
+.footer-info button {
+  font-size: 14px;
+  border-radius: 20px;
+  background-color: transparent;
+  border: 2px solid #66C05D;
+  padding: 10px 25px;
+  margin-left: 36px;
+  transition: 0.2s ease;
+  cursor: pointer;
+}
+
+.social {
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.social-item {
+  margin-right: 20px;
+}
+
+.social-link {
+  display: block;
+  width: 45px;
+  height: 40px;
+  border: 2px solid #66C05D;
+  border-radius: 100%;
+  background-repeat: no-repeat;
+}
+.social-youtube {
+  background-image: url(/img/youtube.svg);
+  background-position: center center;
+}
+
+.social-vk {
+  background-image: url(/img/vk1.svg);
+  background-position: center center;
+}
+
+.social-facebook {
+  background-image: url(/img/fb.svg);
+  background-position: center center;
+}
+
+.social-instagram {
+  background-image: url(/img/inst.svg);
+  background-position: center center;
+}
+
+.footer-bottom {
+  font-size: 12px;
+  display: flex;
+  justify-content: space-between;
+  color: #828282;
+  padding: 26px 0;
+}
+
+.footer-bottom p {
+  margin: 0;
+}
+
+.footer-bottom a {
+  color: #828282;
+  text-decoration: none;
 }
 
